# Copyright (c) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")
import("//foundation/multimedia/image_framework/ide/image_decode_config.gni")

ohos_fuzztest("ImageCr3BoxFuzzTest") {
  module_out_path = "image_framework/image_framework"
  fuzz_config_file = "$image_subsystem/frameworks/innerkitsimpl/test/fuzztest/imagecr3box_fuzzer"

  include_dirs = [
    "./include",
    "$image_subsystem/interfaces/innerkits/include",
    "$image_subsystem/frameworks/innerkitsimpl/test/fuzztest/common/include",
    "$image_subsystem/plugins/common/libs/image/libextplugin/include/heif_impl/heif_parser/box",
    "$image_subsystem/plugins/common/libs/image/libextplugin/include/heif_impl/heif_parser",
  ]

  sources = [
    "src/image_cr3_box_fuzzer.cpp",
  ]

  deps = [
    "${image_subsystem}/frameworks/innerkitsimpl/utils:image_utils",
    "${image_subsystem}/plugins/common/libs/image/libextplugin:heifparser",
    "${image_subsystem}/interfaces/innerkits:image_native",
  ]

  external_deps = [
    "c_utils:utils",
    "hilog:libhilog",
    "libexif:libexif",
  ]

  cflags = [
    "-Dprotected=public",
    "-Dprivate=public",
  ]

  configs = [
    "//build/config/compiler:rtti",
  ]
}
