# Copyright (c) 2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")
import("//foundation/multimedia/image_framework/ide/image_decode_config.gni")

ohos_fuzztest("ImageFwkDecodeHeifFuzzTest") {
  module_out_path = "image_framework/image_framework"
  fuzz_config_file = "$image_subsystem/frameworks/innerkitsimpl/test/fuzztest/imagefwkdecodeheif_fuzzer"
  resource_config_file = "$image_subsystem/test/resource/image/ohos_test.xml"

  include_dirs = [
    "./include",
    "$image_subsystem/interfaces/innerkits/include",
    "$image_subsystem/plugins/common/libs/image/libextplugin/include",
    "$image_subsystem/plugins/common/libs/image/libextplugin/include/heif_impl",
    "$image_subsystem/plugins/common/libs/image/libextplugin/include/heif_impl/heif_parser",
  ]

  sources = [ "src/image_fwk_decode_heif_fuzzer.cpp" ]

  defines = [
    "JPEG_HW_DECODE_ENABLE",
    "HEIF_HW_DECODE_ENABLE",
  ]

  deps = [
    "$image_subsystem/interfaces/innerkits:image_native",
    "${image_subsystem}/plugins/common/libs/image/libextplugin:extplugin",
    "${image_subsystem}/plugins/common/libs/image/libextplugin:heifimpl",
    "${image_subsystem}/plugins/common/libs/image/libextplugin:heifparser",
    "${image_subsystem}/frameworks/innerkitsimpl/utils:image_utils",
  ]

  external_deps = [
    #"c_utils:utils",
    "drivers_interface_codec:libcodec_proxy_4.0",
    "drivers_interface_codec:libimage_proxy_2.1",
    "drivers_interface_display:display_commontype_idl_headers",
    "graphic_2d:color_manager",
    "graphic_surface:surface",
    "openmax:libopenmax_static",
  ]
}
