# Copyright (c) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")
import("//foundation/multimedia/image_framework/ide/image_decode_config.gni")

ohos_fuzztest("ImageJpegYuvPluginFuzzTest") {
  module_out_path = "multimedia_image/image_framework"
  fuzz_config_file = "$image_subsystem/frameworks/innerkitsimpl/test/fuzztest/imagejpegyuvplugin_fuzzer"

  include_dirs = [
    "./include",
    "$image_subsystem/interfaces/innerkits/include",
    "$image_subsystem/frameworks/innerkitsimpl/utils/include",
    "$image_subsystem/frameworks/innerkitsimpl/test/fuzztest/common/include",
    "$image_subsystem/plugins/common/libs/image/libextplugin/include/jpeg_yuv_decoder",
  ]

  sources = [
    "$image_subsystem/frameworks/innerkitsimpl/test/fuzztest/common/src/common_fuzztest_function.cpp",
    "src/image_jpeg_yuv_plugin_fuzz.cpp",
  ]

  deps = [
    "$image_subsystem/frameworks/innerkitsimpl/utils:image_utils",
    "$image_subsystem/interfaces/innerkits:image_native",
    "$image_subsystem/plugins/common/libs/image/libextplugin:extplugin",
  ]

  external_deps = [
    "astc-encoder:astc_encoder_shared",
    "c_utils:utils",
    "drivers_interface_display:libdisplay_commontype_proxy_1.0",
    "ffmpeg:libohosffmpeg",
    "ffrt:libffrt",
    "graphic_2d:color_manager",
    "graphic_surface:surface",
    "hilog:libhilog",
    "hisysevent:libhisysevent",
    "libexif:libexif",
    "libjpeg-turbo:turbojpeg",
    "skia:libjpeg",
    "skia:piex",
    "skia:skia_canvaskit",
    "zlib:libz",
  ]

  cflags = [
    "-Dprotected=public",
    "-Dprivate=public",
  ]
}
