# Copyright (c) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")
import("//foundation/multimedia/image_framework/ide/image_decode_config.gni")

config("image_external_config") {
  include_dirs = [
    "./include",
    "$image_subsystem/interfaces/innerkits/include",
    "$image_subsystem/frameworks/innerkitsimpl/test/fuzztest/common/include",
  ]
}

ohos_fuzztest("ImagePixelYuv2FuzzTest") {
  public_configs = [ ":image_external_config" ]
  sources = [
    "$image_subsystem/frameworks/innerkitsimpl/test/fuzztest/common/src/common_fuzztest_function.cpp",
    "src/image_pixelyuv_fuzzer.cpp"
  ]
  deps = [ 
    "$image_subsystem/interfaces/innerkits:image_native",
    "$image_subsystem/plugins/manager:pluginmanager",
    "$image_subsystem/frameworks/innerkitsimpl/utils:image_utils",
    "$image_subsystem/mock/native:log_mock_static",
  ]
  external_deps = [
    "c_utils:utils",
    "hilog:libhilog",
    "ffmpeg:libohosffmpeg",
    "bundle_framework:appexecfwk_core",
    "ipc:ipc_single",
  ]
  fuzz_config_file = "$image_subsystem/frameworks/innerkitsimpl/test/fuzztest/imagepixelYuv2_fuzzer"
  module_out_path = "image_framework/image_framework"
}
